# hawk-yolo-trainers

./: .gitignore  LICENSE  README.md  pyproject.toml
hawk_yolo_trainers/yolo/: config.py
hawk_yolo_trainers/yolo_radar/: config.py  model.py
src/hawk_yolo_trainers/: __init__.py
src/hawk_yolo_trainers/yolo/: model.py  trainer.py
src/hawk_yolo_trainers/yolo_radar/: trainer.py
tests/: __init__.py  test_config.py  test_trainer.py
