[project]
name = "hawk-yolo-trainers"
version = "0.1.0"
description = "YOLO and YOLO-Radar trainers for Hawk - GPL-3.0-only"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.8,<3.13"
dependencies = [
    "cmuhawk @ git+https://github.com/cmusatyalab/hawk.git",
    "torch>=2.2,<3.0",
    "torchvision>=0.17,<0.18",
    "opencv-python-headless>=4.7.0",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "scikit-learn>=1.3",
    "tensorboard>=2.1",
    "albumentations>=1.3",
    "requests>=2.32.4",
]

[project.entry-points."cmuhawk.models"]
yolo = "hawk_yolo_trainers.yolo.trainer:YOLOTrainer"
yolo_radar = "hawk_yolo_trainers.yolo_radar.trainer:YOLOTrainerRadar"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv.sources]
cmuhawk = { path = "../hawk", editable = true }

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
